<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="momo.com.week12_project.ui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_containter_main"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="horizontal">

        <momo.com.week12_project.widget.BottomMenu
            android:id="@+id/home_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:menu_select_icon="@mipmap/icon_home_hover"
            app:menu_normal_icon="@mipmap/icon_home"
            app:menu_text="@string/menu_home"/>

        <momo.com.week12_project.widget.BottomMenu
            android:id="@+id/game_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:menu_select_icon="@mipmap/ic_menu_01_hl"
            app:menu_normal_icon="@mipmap/ic_menu_01_nor"
            app:menu_text="@string/menu_play"/>

        <momo.com.week12_project.widget.BottomMenu
            android:id="@+id/shop_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:menu_select_icon="@mipmap/ic_menu_04_hl"
            app:menu_normal_icon="@mipmap/ic_menu_04_nor"
            app:menu_text="@string/menu_shop"/>

        <momo.com.week12_project.widget.BottomMenu
            android:id="@+id/me_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:menu_select_icon="@mipmap/ic_menu_05_hl"
            app:menu_normal_icon="@mipmap/ic_menu_05_nor"
            app:menu_text="@string/menu_me"/>

    </LinearLayout>

</LinearLayout>
